# cli

./: CMakeLists.txt
Include/: CMakeLists.txt  cli.h
Include/Detail/: abstract_command.h  app.h  argument_handler.h  cli_exceptions.h  generic_command.h  menu.h  simple_command.h
Source/: CMakeLists.txt
Source/Detail/: abstract_command.cpp  app.cpp  cli_exceptions.cpp  menu.cpp  simple_command.cpp
Test/: CMakeLists.txt
Test/cli_tests/: CMakeLists.txt  basic_tests.cpp  exception_tests.cpp
